--- a/livingroom.yaml
+++ b/livingroom.yaml
@@ -3,12 +3,18 @@
 
 esphome:
   name: livingroom
-  platform: ESP8266
-  board: nodemcuv2
 
-sensor:
+# https://esphome.io/devices/nodemcu_esp8266.html
+esp8266:
+  board: nodemcu
+
+binary_sensor:
+  # https://esphome.io/components/binary_sensor/status.html
   - platform: status
     name: "livingroom Status"
+
+sensor:
+  # https://esphome.io/components/sensor/dht.html?highlight=dht
   - platform: dht
     pin: D2
     model: AM2302
