--- a/base.yaml
+++ b/base.yaml
@@ -1,13 +1,13 @@
 wifi:
-  domain: !env_var WIFI_DOMAIN
-  ssid: !env_var WIFI_SSID
-  password: !env_var WIFI_PASSWORD
-  # Optional manual IP
+    domain: !env_var WIFI_DOMAIN
+    ssid: !env_var WIFI_SSID
+    password: !env_var WIFI_PASSWORD
+    # Optional manual IP
 
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Livingroom Fallback Hotspot"
-    password: !env_var WIFI_FALLBACK_PASSWORD
+    # Enable fallback hotspot (captive portal) in case wifi connection fails
+    ap:
+        ssid: "Livingroom Fallback Hotspot"
+        password: !env_var WIFI_FALLBACK_PASSWORD
 
 captive_portal:
 
@@ -19,11 +19,11 @@ logger:
 api:
 
 # https://esphome.io/components/mqtt.html
-mqtt:
-  broker: !env_var MQTT_ENDPOINT
-  port: !env_var MQTT_PORT
-  username: !env_var MQTT_USERNAME
-  password: !env_var MQTT_PASSWORD
+# mqtt:
+#   broker: !env_var MQTT_ENDPOINT
+#   port: !env_var MQTT_PORT
+#   username: !env_var MQTT_USERNAME
+#   password: !env_var MQTT_PASSWORD
 
 # https://esphome.io/components/ota.html
 ota:
