--- a/detection.yaml
+++ b/detection.yaml
@@ -1,5 +1,5 @@
 # include the base config like wifi and logging
-<<: !include base.yaml
+<<: !include include-base.yaml
 
 esphome:
   name: floortracker
