--- a/livingroom.yaml
+++ b/livingroom.yaml
@@ -1,5 +1,5 @@
 # include the base config like wifi and logging
-<<: !include base.yaml
+<<: !include-base base.yaml
 
 esphome:
   name: livingroom
