--- a/box-01.yaml
+++ b/box-01.yaml
@@ -4,7 +4,7 @@
 <<: !include ./include-esp8266-i2c.yaml.snipped
 
 substitutions:
-  name: box-01
+  name: box-01-seedlings
   id: box_01
   intervall: 15s
   friendly_name: ${name} Sensor
@@ -35,19 +35,19 @@ sensor:
       App.register_component(sht20);
       return {sht20->temperature_sensor, sht20->humidity_sensor, sht20->vpd_sensor, sht20->dew_point_sensor};
     sensors:
-      - name: "${friendly_name_humidity} SHT20"
-        id: ${id}_temperature
+      - name: "${friendly_name_temp}"
+        id: ${id}_seedlings_temperature
         unit_of_measurement: °C
         accuracy_decimals: 2
-      - name: "${friendly_name_humidity} SHT20"
-        id: ${id}_humidity
+      - name: "${friendly_name_humidity}"
+        id: ${id}_seedlings_humidity
         unit_of_measurement: "%"
         accuracy_decimals: 2
-      - name: "${name} Vapour-pressure deficit SHT20"
-        id: ${id}_vpd
+      - name: "${name} Vapour-pressure deficit"
+        id: ${id}_seedlings_vpd
         unit_of_measurement: "kPa"
         accuracy_decimals: 2
-      - name: "${name} Dew point SHT20"
-        id: ${id}_dew_point
+      - name: "${name} Dew point"
+        id: ${id}_seedlings_dew_point
         unit_of_measurement: °C
         accuracy_decimals: 2
