--- a/nous-a1t-02.yaml
+++ b/nous-a1t-02.yaml
@@ -3,6 +3,7 @@
 <<: !include ./include-nous-a1t.yaml.snipped
 
 substitutions:
+  comment: ""
   name: nous-a1t-02
   id: nous_a1t_02
   # Higher value gives lower watt readout
