--- a/gosund-sp111-03.yaml
+++ b/gosund-sp111-03.yaml
@@ -1,11 +1,9 @@
-# include the base config like wifi and logging
-<<: !include ./include-base.yaml.snipped
-<<: !include ./include-gosund-sp111.yaml.snipped
 
 substitutions:
   name: gosund-sp111-03
   id: gosund_sp111_03
-  # Higher value gives lower watt readout
-  current_res: "0.00280"
-  # Lower value gives lower voltage readout
-  voltage_div: "775"
+  comment: "Box3 Lamp"
+
+packages:
+  plug: !include 
+    file: common/gosund-sp111.yaml
