--- a/gosund-sp111-05.yaml
+++ b/gosund-sp111-05.yaml
@@ -1,12 +1,14 @@
 # include the base config like wifi and logging
-<<: !include ./include-base.yaml.snipped
-<<: !include ./include-gosund-sp111.yaml.snipped
+
 
 substitutions:
   name: gosund-sp111-05
   id: gosund_sp111_05
   comment: "playground plug"
-  # Higher value gives lower watt readout
-  current_res: "0.00280"
-  # Lower value gives lower voltage readout
-  voltage_div: "775"
+
+
+packages:
+  plug: !include 
+    file: common/gosund-sp111.yaml
+  intervall: !include 
+    file: common/switch-intervall.yaml
