--- a/nous-a1t-04.yaml
+++ b/nous-a1t-04.yaml
@@ -1,12 +1,13 @@
-# include the base config like wifi and logging
-<<: !include ./include-base.yaml.snipped
-<<: !include ./include-nous-a1t.yaml.snipped
-
 substitutions:
   name: nous-a1t-04
   id: nous_a1t_04
-  # Higher value gives lower watt readout
-  current_res: "0.00280"
-  # Lower value gives lower voltage readout
-  voltage_div: "775"
+  comment: "Box02 Pump"
+  restore_mode: ALWAYS_OFF
+
+packages:
+  plug: !include 
+    file: common/nous-a1t.yaml
+  intervall: !include 
+    file: common/switch-intervall.yaml
+
 
