--- a/nous-a1t-06.yaml
+++ b/nous-a1t-06.yaml
@@ -1,38 +1,13 @@
 # include the base config like wifi and logging
-<<: !include ./include-nous-a1t.yaml.snipped
 
 substitutions:
   name: nous-a1t-06
   id: nous_a1t_06
-  comment: "Playground Socket"
-  # Higher value gives lower watt readout
-  current_res: "0.00280"
-  # Lower value gives lower voltage readout
-  voltage_div: "775"
+  comment: "POC mother tents"
+  restore_mode: ALWAYS_OFF
 
-
-script:
-  - id: ${id}_intervall
-    then:
-      - switch.turn_on: ${id}_button_switch
-      - logger.log:
-          format: "Waiting %.1fs"
-          args: [ 'id(${id}_intervall_duration).state' ]      
-      - delay: !lambda "return id(${id}_intervall_duration).state * 1000;"
-      - switch.turn_off: ${id}_button_switch
- 
-
-number:
-  - platform: template
-    name: "${name} - Intervall Duration"
-    id: ${id}_intervall_duration
-    optimistic: true
-    min_value: 0
-    max_value: 30
-    step: 5
-
-button:
-  - platform: template
-    name: "${name} - Intervall"
-    on_press:
-      - script.execute: ${id}_intervall
+packages:
+  nous: !include 
+    file: common/nous-a1t.yaml
+  intervall: !include 
+    file: common/switch-intervall.yaml
