--- a/nous-a1t-07.yaml
+++ b/nous-a1t-07.yaml
@@ -1,12 +1,7 @@
-# include the base config like wifi and logging
-<<: !include ./include-base.yaml.snipped
-<<: !include ./include-nous-a1t.yaml.snipped
-
 substitutions:
   name: nous-a1t-07
   id: nous_a1t_07
-  # Higher value gives lower watt readout
-  current_res: "0.00280"
-  # Lower value gives lower voltage readout
-  voltage_div: "775"
 
+packages:
+  plug: !include 
+    file: common/nous-a1t.yaml
