--- a/nous-a1t-01.yaml
+++ b/nous-a1t-01.yaml
@@ -1,9 +1,10 @@
 substitutions:
-  comment: ""
+  comment: "Box Mother Air"
   name: nous-a1t-01
   id: nous_a1t_01
-
 
 packages:
   plug: !include 
     file: common/nous-a1t.yaml
+    vars:
+      restore_mode: ALWAYS_ON
