--- a/cam-01.yaml
+++ b/cam-01.yaml
@@ -1,7 +1,7 @@
-# include the base config like wifi and logging
-<<: !include ./include-base.yaml.snipped
-<<: !include ./include-esp32-cam-mb.yaml.snipped
-
 substitutions:
   name: cam-01
   id: cam_01
+
+packages:
+  cam: !include 
+    file: common/esp32-cam-mb.yaml
