--- a/cam-04.yaml
+++ b/cam-04.yaml
@@ -1,7 +1,8 @@
-# include the base config like wifi and logging
-<<: !include ./include-base.yaml.snipped
-<<: !include ./include-esp32-cam-mb.yaml.snipped
-
 substitutions:
   name: cam-04
   id: cam_04
+  comment: "Box4 CAM 01"
+
+packages:
+  cam: !include 
+    file: common/esp32-cam-mb.yaml
