--- a/src/nous-a1t-01.yaml
+++ b/src/nous-a1t-01.yaml
@@ -1,5 +1,5 @@
 substitutions:
-  comment: "Box Mother Air"
+  comment: "Circulation pump Box Mother"
   name: nous-a1t-01
   id: nous_a1t_01
 
@@ -7,4 +7,4 @@ packages:
   plug: !include 
     file: common/nous-a1t.yaml
     vars:
-      restore_mode: ALWAYS_ON
+      restore_mode: RESTORE_DEFAULT_OFF
